# StakeAPI

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  curl-test.txt  pyproject.toml  setup_dev.ps1
.github/workflows/: ci.yml  docs.yml
_includes/: chipaeditor-cta.html
docs/: Gemfile  README.md  _config.yml  index.md  robots.txt  sitemap.xml
docs/_includes/: affiliate-banner.html  affiliate-cta.html  discord-cta.html
docs/api-reference/: auth-manager.md  client.md  endpoints.md  exceptions.md  index.md  models.md  utilities.md
docs/getting-started/: authentication.md  index.md  installation.md  quickstart.md
docs/guides/: advanced-usage.md  betting.md  casino-games.md  error-handling.md  graphql-queries.md  index.md  performance.md  rate-limiting.md  security.md  sports-betting.md  user-account.md  websockets.md
docs/resources/: changelog.md  contributing.md  examples.md  faq.md  index.md  migration.md  troubleshooting.md
examples/: advanced_usage.py  balance.py  balance_example.py  basic_usage.py
stakeapi/: __init__.py  _version.py  auth.py  client.py  endpoints.py
tests/: __init__.py  conftest.py  test_client.py  test_models.py  test_utils.py
